--- a/views/public/css/mall-map.css
+++ b/views/public/css/mall-map.css
@@ -114,7 +114,7 @@ div[role="main"] {
     margin-top: 0;
     font-weight: normal;
     background-color: #edc86a;
-    color: white;
+    color: #3d5a80;
     position: absolute;
     top: 0;
     left: 0;
