--- a/views/public/css/mall-map.css
+++ b/views/public/css/mall-map.css
@@ -126,11 +126,14 @@ div[role="main"] {
 
 #info-panel h1 {
     background-color: #8cbcd8;
-    color: #3d5a80;
-    margin: -20px -10px 20px;
-    padding: 10px;
-    font-weight: 300;
+    color: white;
+    margin: 0;
+    padding: 15px;
+    font-weight: 600;
     text-align: center;
+    z-index: 4000;
+    font-size: 2rem;
+    text-shadow: 0.5px 0.5px 2px black;
 }
 
 a#toggle-map-button:before { content: "\e00f"; }
@@ -214,13 +217,13 @@ a#locate-button {
     display: block;
     padding: .5em 10px;
     z-index: 1010;
-    background-color: #edc86a;
-    border-bottom: 1px solid rgba(255,255,255,.5);
-    color: #3d5a80;
+    color: white;
+    text-shadow: 0.5px 0.5px 2px black;
+
 }
 
 #info-panel .back-button:hover {
-    color: white;
+    color: #edc86a;
 }
 
 #filters {
@@ -287,26 +290,42 @@ a#locate-button {
     box-sizing: content-box !important;
 }
 #info-panel-container {
-    position: absolute;
-    background: url('../images/bg.jpg') no-repeat top right;
-    background-size: cover;
-    top: 0;
-    left: 0;
-    height: 89%;
-    z-index: 1020;
     width: 100%;
+    border: 48px solid transparent;
+    background: rgba(0,0,0,.5);
+    z-index: 2000;
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
 }
 
 #info-panel{
-    height: 100%;
-    overflow: None;
-    /* -webkit-overflow-scrolling: touch; */
-    margin-bottom: 1em;
+    position: absolute;
+    width: 800px;
+    height: 600px;
+    max-width: 100%;
+    max-height: 100%;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    -webkit-user-select: text;
+    -ms-user-select: text;
+    user-select: text;
+    z-index: inherit;
 }
 
 #info-panel-content {
-    padding: 20px 10px;
-    max-height: 100%;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    color: #222;
+    font-size: 16px;
+    overflow: hidden;
+    background: url('../images/bg.jpg') no-repeat top right;
+    background-size: cover;
 }
 
 #info-panel p {
@@ -318,12 +337,12 @@ a#locate-button {
 
 .info-content{
     display: flex;
-    position: absolute;
     width: 100%;
-    height: calc(100vh- 50px);
+    height: 100%;
     color: #222;
     overflow: hidden;
 }
+
 @media screen and (max-width: 640px) {
 
     .info-content {
@@ -334,11 +353,19 @@ a#locate-button {
 
 .info-content .image-container{
     flex: 1 1;
-    margin: 0 1rem;
+    position: relative;
+    margin: 0;
+}
+
+.info-content .image-container img{
+    position: static;
+    width: 100%;
+    height: 100% !important;
+    object-fit: cover;
+    margin: 0;
 }
 .info-content .content-container{
     flex: 1 1;
-    margin: 0 1rem;
     display: flex;
     flex-direction: column;
     overflow: auto;
@@ -351,16 +378,13 @@ a#locate-button {
     padding: 0px 32px;
     padding-bottom: 20px;
 }
-
-img.image-container{
-    position: absolute;
-    left: 0;
-    top: 0;
+h2.info-panel-title{
     width: 100%;
-    height: 100%;
-    background: no-repeat 50%;
-    background-size: cover;
-    cursor: pointer;
+    font-size: 1.5rem;
+    font-weight: 700;
+    line-height: 1.33;
+    margin: 12px 0;
+    margin-top: 1.45rem;
 }
 
 /* Leaflet Overrides */
