--- a/views/public/css/mall-map.css
+++ b/views/public/css/mall-map.css
@@ -517,13 +517,18 @@ h2.info-panel-title{
 /* Leaflet Overrides */
 
 .extentControl{
-    background : url(icons.png) no-repeat 50% 50%;
+    background : url(sphere.svg) no-repeat 50% 50%;
     background-size: 20px 20px;
     box-shadow: 0 1px 5px rgba(0,0,0,0.65);
     border-radius: 4px;
     cursor: pointer !important;
+    background-color: #fff;
+}
+
+.extentControl-disabled{
     background-color: #f4f4f4;
     color: #bbb;
+    cursor: default !important;
 }
 
 .leaflet-container {
