--- a/views/public/css/mall-map.css
+++ b/views/public/css/mall-map.css
@@ -709,4 +709,13 @@ h2.credits{
         top: 124px;
     }
 
+    #map {
+        height: calc(100vh - 54px - 75px) !important;
+    }
+
+    /* #extent-control {
+        width: 32px !important;
+    height: 32px !important;
+    } */
+
 }
