fix width for link exhibit btn

--- a/views/admin/css/tour-1.7.css
+++ b/views/admin/css/tour-1.7.css
@@ -56,9 +56,12 @@
 }
 .exhibit{
 	cursor: pointer;
+    margin: 0 1em;
+    flex: 0 0 80px;
 }
 .remove{
 	cursor: pointer;
+	flex: 0 0;
 }
 .tour-item-ui{
 	display: flex;
