--- a/views/admin/css/tour-1.7.css
+++ b/views/admin/css/tour-1.7.css
@@ -79,6 +79,10 @@
     font-style: italic;
 }
 
+.ui-menu-item{
+	padding-left: 5px;
+}
+
 #sortable { list-style-type: none; margin: 2em 0 0; padding: 0; width: 100%;}
 #sortable li {
 	display: flex;
