Update walking-tour.css to remove link borders

--- a/views/public/css/walking-tour.css
+++ b/views/public/css/walking-tour.css
@@ -333,6 +333,10 @@ a#locate-button {
     cursor: default;
 }
 
+#info-panel a {
+    border: none;
+}
+
 #tour-type-div p{
     margin: 0;
     font-size: 20px;
